--- a/scss/style.scss
+++ b/scss/style.scss
@@ -333,10 +333,11 @@ html {
   }
 }
 
-// .attribution {
-// font-size: 11px;
-// text-align: center;
-// }
-// .attribution a {
-// color: hsl(228, 45%, 44%);
-// }
+.attribution {
+  text-align: center;
+font-size: 1.1rem;
+text-align: start;
+}
+.attribution a {
+color: #ffffff;
+}
